--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 </head>
 <body>
      <div class="main">
-    <section>1</section>
-    <section>2</section>
-    <section>3</section>
-    <section>4</section>
+    <section id="me">
+        <div id="left">
+        <img src="" alt="">
+        <h2>Yida Chen</h2>
+        </div>
+        <article id="right"></article>
+    </section>
+    <section id="tool">2</section>
+    <section id="work">3</section>
+    <section id="contact">4</section>
   </div>
     <script src="js/jquery-2.1.1.min.js"></script>
     <script src="js/jquery.onepage-scroll.js"></script>
